# indexatron

./: .gitignore  README.md  RESULTS.md  pyproject.toml  requirements.txt
scripts/: analyze_single.py  generate_embedding.py  process_batch.py  test_connection.py
src/indexatron/: __init__.py  analyzer.py  client.py  embedder.py  models.py  processor.py
