[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "indexatron"
version = "0.1.0"
description = "AI-powered family photo analysis using local LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
